--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,8 @@
 
 :root {
   --primary-white: #fff;
+  --primary-orange: #f9ab00;
+  --primary-dark: rgba(255, 255, 255, 0);
 }
 
 body {
@@ -15,6 +17,7 @@ body {
 
 nav a.nav-link {
   /* font-weight: 500; */
+  font-size: 0.8rem;
   letter-spacing: 0.0375rem;
   cursor: pointer;
 }
@@ -26,10 +29,20 @@ nav ul li {
   color: var(--primary-white) !important;
   margin-right: 0.75rem;
   margin-left: 00.75rem;
+  border-top: 0.1875rem solid var(--primary-dark);
 }
 
 .navbar-brand {
   max-width: 17.25rem;
   padding: 0 !important;
   height: 6rem !important;
+}
+
+.navbar-nav > li > a.active,
+.navbar-nav > li > a.active:focus {
+  border-top: 0.1875rem solid var(--primary-orange);
+}
+
+.navbar-nav > li > a:hover {
+  border-top: 0.1875rem solid var(--primary-orange);
 }
