--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,29 @@ nav ul li {
 .navbar-nav > li > a:hover {
   border-top: 0.1875rem solid var(--primary-orange);
 }
+
+/*----------------Header---------------*/
+.header-wrapper {
+  position: relative;
+  background: url(bg-img.jfif) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  font-family: "Roboto Condensed", sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.main-info h1 {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+}
+.typed-text {
+  font-size: 2rem;
+  color: var(--primary-white);
+}
