--- a/src/App.css
+++ b/src/App.css
@@ -9,11 +9,11 @@
 }
 
 body {
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto Condensed", sans-serif !important;
 }
 /**********Nabar***********/
 nav {
-  z-index: 2;
+  z-index: 3;
 }
 .logo {
   width: 10rem;
@@ -75,7 +75,6 @@ nav ul li {
 }
 
 .main-info {
-  font-family: "Roboto Condensed", sans-serif;
   display: flex;
   position: absolute;
   top: 0;
@@ -86,7 +85,7 @@ nav ul li {
   justify-content: center;
   align-items: center;
   text-align: center;
-  z-index: 1;
+  z-index: 3;
 }
 
 .main-info h1 {
@@ -126,7 +125,29 @@ nav ul li {
   position: absolute;
   height: 100vh;
   width: 100vw;
-  z-index: 1;
+  z-index: 2;
+}
+
+/**************About me*****************/
+
+.profile-img {
+  width: 16rem;
+  height: 20rem;
+  border-radius: 60px;
+  padding: 0.3rem;
+  border: 1px solid var(--primary-orange);
+}
+.about-heading {
+  color: var(--primary-orange);
+  text-transform: uppercase;
 }
 @media (max-width: 768px) {
+  .photo-wrap {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .about-heading {
+    text-align: center;
+  }
 }
