--- a/src/App.css
+++ b/src/App.css
@@ -154,18 +154,18 @@ nav ul li {
 /***********skills***************/
 
 .skills {
-  background-color: black;
+  background-color: #212529;
   color: #fff;
-  padding-left: 5rem;
-  padding-right: 5rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
 }
 .skills-container {
   display: flex;
-  justify-content: space-between;
+  /* flex-wrap: wrap; */
 }
 .developments {
   display: flex;
-  width: 50%;
+  width: 40%;
   flex-wrap: wrap;
 }
 .development {
@@ -173,11 +173,44 @@ nav ul li {
   height: 4rem;
   font-size: 0.8rem;
   font-weight: 200;
-  border: 1px solid white;
+  border: 1px solid var(--primary-orange);
   border-radius: 50%;
   text-align: center;
 }
-
+.skill-tests {
+  width: 30%;
+  font-size: 0.8rem;
+}
+.skill-tools {
+  width: 30%;
+  font-size: 0.8rem;
+}
 .development p {
   margin: 40% auto;
+}
+
+@media (max-width: 414px) {
+  .skills-container {
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    /* flex-wrap: wrap; */
+  }
+  /* .development {
+    width: 3rem;
+    height: 3rem;
+    font-size: 0.6rem;
+    font-weight: 150;
+    border: 1px solid var(--primary-orange);
+    border-radius: 50%;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+  } */
+  .skill-development-conainter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
 }
