--- a/src/App.css
+++ b/src/App.css
@@ -212,6 +212,10 @@ nav ul li {
 }
 
 @media (max-width: 414px) {
+  /* .skills {
+    padding-left: 0rem;
+    padding-right: 0rem;
+  } */
   .skills-container {
     display: flex;
     flex-direction: column;
@@ -219,17 +223,7 @@ nav ul li {
     align-items: center;
     /* flex-wrap: wrap; */
   }
-  /* .development {
-    width: 3rem;
-    height: 3rem;
-    font-size: 0.6rem;
-    font-weight: 150;
-    border: 1px solid var(--primary-orange);
-    border-radius: 50%;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-  } */
+
   .skill-development-conainter {
     display: flex;
     flex-direction: column;
@@ -237,8 +231,12 @@ nav ul li {
     margin-bottom: 2rem;
   }
   .skill-tools {
-    font-size: 0.8rem;
-    margin-bottom: 2rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .skill-tests {
     width: 100%;
     display: flex;
     flex-direction: column;
