add media query for experience comp

--- a/src/App.css
+++ b/src/App.css
@@ -248,8 +248,11 @@ nav ul li {
 }
 
 /***********Experience*******************/
+.experience {
+  padding: 0.7rem;
+}
 .experience-wrapper {
-  position: absolute;
+  position: relative;
   padding: 3.125rem 0;
   overflow: hidden;
 }
@@ -306,4 +309,23 @@ nav ul li {
   margin-top: 0.3125rem;
   color: var(--primary-red);
   font-weight: 900;
+}
+
+@media (max-width: 768px) {
+  .experience .container {
+    padding-left: 0;
+  }
+  .experience-wrapper::before {
+    left: 0.5rem;
+    margin-bottom: 1.875rem;
+  }
+  .timeline-block-right {
+    float: none;
+    width: 100%;
+  }
+  .timeline-block-left {
+    float: none;
+    direction: ltr;
+    width: 100%;
+  }
 }
