add style to the footer

--- a/src/App.css
+++ b/src/App.css
@@ -331,3 +331,22 @@ nav ul li {
 }
 
 /****************Footer**********************/
+.footer {
+  background: #212529;
+  color: var(--primary-dark-grey);
+  padding: 3rem;
+}
+
+.footer a {
+  text-decoration: none;
+  color: var(--primary-dark-grey);
+}
+
+.footer a:hover {
+  text-decoration: none;
+  color: var(--primary-orange);
+  cursor: pointer;
+}
+.footer p {
+  margin-bottom: 0;
+}
