--- a/src/App.css
+++ b/src/App.css
@@ -435,7 +435,21 @@ svg.arrow-up:hover {
   border: 1px solid var(--primary-red);
   cursor: pointer;
 }
-.overflow:hover {
+.portfolio-image-box:hover .overflow {
   opacity: 60%;
   transition: 0.3s ease-in-out;
+}
+.portfolio-icon {
+  position: absolute;
+  opacity: 0;
+  margin-left: -8rem;
+  margin-top: 3.6rem;
+  color: var(--primary-orange);
+  font-size: 1.5rem;
+}
+
+.portfolio-image-box:hover .portfolio-icon {
+  opacity: 70%;
+  transition: 0.3s ease-in-out;
+  cursor: pointer;
 }
