--- a/src/App.css
+++ b/src/App.css
@@ -453,3 +453,22 @@ svg.arrow-up:hover {
   transition: 0.3s ease-in-out;
   cursor: pointer;
 }
+
+/*****************popupbox*********************/
+.portfolio-image-popupbox {
+  width: 45rem;
+  padding: 0 0.5rem;
+}
+
+.hyper-link {
+  cursor: pointer;
+  color: var(--primary-orange);
+}
+
+.hyper-link {
+  cursor: pointer;
+  color: var(--primary-orange);
+}
+.hyper-link:hover {
+  color: var(--primary-red);
+}
