--- a/src/App.css
+++ b/src/App.css
@@ -420,7 +420,9 @@ svg.arrow-up:hover {
   border: 1px solid var(--primary-orange);
   padding: 0.5rem;
 }
-
+h1.text-uppercase.text-center.py-5 {
+  color: var(--primary-orange);
+}
 .portfolio-image-box {
   position: relative;
   margin: 1rem;
